Add get all endpoint (#22)
* Added ``FindUsers`` endpoint.
* Added MongoDB, MySQL and PostgrSQL ``FindAllUsers`` methods and tests.
* Added FindAllUsers ``service`` method.
* Added ``FindUsers`` controller and routing methods and tests.
* Updated openapi.yml and swagger specs.
